Release history for Catalyst-Controller-Accessors

{{$NEXT}}

0.002000  2011-12-12 15:31:59 CST6CDT
  - Add ability to choose the slot an accessor uses

0.001000  2011-09-24 02:02:13 CST6CDT

  - Initial Release